RESOLVED FIXED174077
REGRESSION(r218910): Crash inside textMarkerDataForFirstPositionInTextControl
https://bugs.webkit.org/show_bug.cgi?id=174077
Summary REGRESSION(r218910): Crash inside textMarkerDataForFirstPositionInTextControl
Ryosuke Niwa
Reported 2017-07-02 02:19:13 PDT
Crash inside textMarkerDataForFirstPositionInTextControl
Attachments
Fixes the bug (5.89 KB, patch)
2017-07-02 02:21 PDT, Ryosuke Niwa
no flags
Archive of layout-test-results from ews102 for mac-elcapitan (1.04 MB, application/zip)
2017-07-02 03:21 PDT, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (1.13 MB, application/zip)
2017-07-02 03:25 PDT, Build Bot
no flags
Archive of layout-test-results from ews117 for mac-elcapitan (1.82 MB, application/zip)
2017-07-02 03:48 PDT, Build Bot
no flags
Fixed the test (6.15 KB, patch)
2017-07-02 17:41 PDT, Ryosuke Niwa
cfleizach: review+
Ryosuke Niwa
Comment 1 2017-07-02 02:21:45 PDT
Created attachment 314413 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2017-07-02 02:22:14 PDT
Build Bot
Comment 3 2017-07-02 03:21:16 PDT
Comment on attachment 314413 [details] Fixes the bug Attachment 314413 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/4038503 New failing tests: accessibility/mac/input-type-change-crash.html
Build Bot
Comment 4 2017-07-02 03:21:17 PDT
Created attachment 314414 [details] Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5 2017-07-02 03:25:12 PDT
Comment on attachment 314413 [details] Fixes the bug Attachment 314413 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/4038507 New failing tests: accessibility/mac/input-type-change-crash.html
Build Bot
Comment 6 2017-07-02 03:25:13 PDT
Created attachment 314415 [details] Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 7 2017-07-02 03:48:28 PDT
Comment on attachment 314413 [details] Fixes the bug Attachment 314413 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/4038545 New failing tests: accessibility/mac/input-type-change-crash.html
Build Bot
Comment 8 2017-07-02 03:48:29 PDT
Created attachment 314416 [details] Archive of layout-test-results from ews117 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Ryosuke Niwa
Comment 9 2017-07-02 12:28:00 PDT
Ugh... apparently old Ones return values in the reverse order :( I guess I'd have to sort values.
Ryosuke Niwa
Comment 10 2017-07-02 17:41:28 PDT
Created attachment 314430 [details] Fixed the test
Ryosuke Niwa
Comment 11 2017-07-03 11:35:09 PDT
Note You need to log in before you can comment on or make changes to this bug.